# x-clone

back/: Dockerfile  db.sqlite3  fly.toml  pyproject.toml
back/accounts/: models.py  serializers.py  urls.py  views.py
back/accounts/migrations/: 0001_initial.py  0002_user_birth_date_user_full_name.py
back/core/: settings.py  urls.py
back/follows/: models.py  serializers.py  urls.py  views.py
back/follows/migrations/: 0001_initial.py
back/posts/: models.py  serializers.py  urls.py  views.py
back/posts/migrations/: 0001_initial.py  0002_post_retweet_post_alter_post_content_like.py
front/: package-lock.json  package.json
front/src/app/: layout.js  page.jsx
front/src/app/components/feed/: post.jsx  postForm.jsx  profilePic.jsx
front/src/app/components/login/: LoginModal.jsx  RegisterModal.jsx  buttons.jsx  input-count.jsx
front/src/app/components/profile/: FollowButton.jsx  editProfile.jsx  exitProfile.jsx  infos.jsx
front/src/app/feed/: page.jsx
front/src/app/profile/[username]/: page.jsx
front/src/app/services/: api.js  axiosPublic.js
front/src/app/store/: useLoginStore.js  useRegisterStore.js
nome-do-projeto/: package-lock.json  package.json
nome-do-projeto/src/app/: layout.js  page.jsx
nome-do-projeto/src/app/components/fead/post/: index.jsx
nome-do-projeto/src/app/components/fead/post-form/: index.jsx
nome-do-projeto/src/app/fead/: page.jsx
nome-do-projeto/src/app/profile/: page.jsx
nome-do-projeto/src/app/store/: useAuthStore.js
nome-do-projeto/src/app/utils/: api.js
(+11 files in other folders)
